@@ -51,6 +51,8 @@ Core and Builtins
 Library
 -------
 
+- logging: Added style option to Formatter to allow %, {} or $-formatting.
+
 - Issue #5178: Added tempfile.TemporaryDirectory class that can be used
   as a context manager.
 
